--- a/src/web/gui/GUI.html
+++ b/src/web/gui/GUI.html
@@ -20,7 +20,7 @@
 			return null;
 		}
 		if (typeof unityObject != "undefined") {
-			unityObject.embedUnity("unityPlayer", "WebPlayer.unity3d", 600, 450);
+			unityObject.embedUnity("unityPlayer", "WebPlayer.unity3d", 500, 500);
 
 		}
 		-->
@@ -102,7 +102,12 @@ style="position:absolute;top:0%; left: 0px;border: 2px solid #333333; -moz-borde
 	style="position:absolute;top:50px; left: 0%;border: 2px solid #333333; -moz-border-radius : 10px; height: 130px; width: 27%; z-index:100;background-color:rgba(0,0,0,0.3);">
 
 	<span style ="position:absolute;  top:20pt; left:10%;"> Roll Angle(&deg) </span>
-	<input type="text" size="2" id='rA'; style ="position:absolute;  top:50pt; left:10%;  font-size:20px;" />
+	<input type="text" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) || (event.keyCode==189) || (event.keyCode==190) )"  size="2" id='rA'; style ="position:absolute;  top:50pt; left:10%;  font-size:20px;" />
 	</div>
 
 	<div id = "PitchTitle" name="PitchTitle"
@@ -114,7 +119,12 @@ style="position:absolute;top:0%; left: 0px;border: 2px solid #333333; -moz-borde
 	style="position:absolute;top:185px; left: 0%;border: 2px solid #333333; -moz-border-radius : 10px; height: 130px; width: 27%; z-index:100;background-color:rgba(0,0,0,0.3);">
 
 	<span style ="position:absolute; top:20pt; left:10%;"> Pitch Angle(&deg) </span>
-	<input type="text" size="2" id='pA';  style ="position:absolute;  top:50pt; left:10%;  font-size:20px;" />
+	<input type="text" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) || (event.keyCode==189) || (event.keyCode==190) )" size="2" id='pA';  style ="position:absolute;  top:50pt; left:10%;  font-size:20px;" />
 	</div>
 
 	<div id = "YawTitle" name="YawTitle"
@@ -126,7 +136,12 @@ style="position:absolute;top:0%; left: 0px;border: 2px solid #333333; -moz-borde
 	style="position:absolute;top:320px; left: 0%;border: 2px solid #333333; -moz-border-radius : 10px; height: 130px; width: 27%; z-index:100;background-color:rgba(0,0,0,0.3);">
 
 	<span style ="position:absolute; top:20pt; left:10%;"> Yaw Angle(&deg) </span>
-	<input type="text" size="2" id='yA';  style ="position:absolute;  top:50pt; left:10%;  font-size:20px;" />
+	<input type="text" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) || (event.keyCode==189) || (event.keyCode==190) )" size="2" id='yA';  style ="position:absolute;  top:50pt; left:10%;  font-size:20px;" />
 	</div>
 </div>
 
@@ -139,11 +154,26 @@ style="position:absolute;top:0%; left: 0px;border: 2px solid #333333; -moz-borde
 	<div id = "Div2" name="Roll"
 	style="position:absolute;top:50px; left: 0%;border: 2px solid #333333; -moz-border-radius : 10px; height: 130px; width: 27%; z-index:100;background-color:rgba(0,0,0,0.3);">
 	<span style ="position:absolute; top:0pt; left:70pt;"> </span>
-	<input id= "RollP" type="text" size="2"  style ="position:absolute;  top:50pt; right:65%; font-size:20px;" />
+	<input id= "RollP" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )"  style ="position:absolute;  top:50pt; right:65%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:77%;"> P </span>
-	<input id= "RollI" type="text" size="2"  style ="position:absolute;  top:50pt; right:35%; font-size:20px;" />
+	<input id= "RollI" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )"  style ="position:absolute;  top:50pt; right:35%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:47%;"> I </span>
-	<input id= "RollD" type="text" size="2"  style ="position:absolute;  top:50pt; right:5%; font-size:20px;" />
+	<input id= "RollD" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )"  style ="position:absolute;  top:50pt; right:5%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:17%;"> D </span>
 
 	</div>
@@ -156,11 +186,26 @@ style="position:absolute;top:0%; left: 0px;border: 2px solid #333333; -moz-borde
 	<div id = "Div4" name="Pitch"
 	style="position:absolute;top:185px; left: 0%;border: 2px solid #333333; -moz-border-radius : 10px; height: 130px; width: 27%; z-index:100;background-color:rgba(0,0,0,0.3);">
 	<span style ="position:absolute; top:0pt; left:70pt;"> </span>
-	<input id= "PitchP" type="text" size="2"  style ="position:absolute;  top:50pt; right:65%; font-size:20px;" />
+	<input id= "PitchP" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )" style ="position:absolute;  top:50pt; right:65%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:77%;"> P </span>
-	<input id= "PitchI" type="text" size="2"  style ="position:absolute;  top:50pt; right:35%; font-size:20px;" />
+	<input id= "PitchI" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )"  style ="position:absolute;  top:50pt; right:35%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:47%;"> I </span>
-	<input id= "PitchD" type="text" size="2"  style ="position:absolute;  top:50pt; right:5%; font-size:20px;" />
+	<input id= "PitchD" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )" style ="position:absolute;  top:50pt; right:5%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:17%;"> D </span>
 
 	</div>
@@ -173,11 +218,26 @@ style="position:absolute;top:0%; left: 0px;border: 2px solid #333333; -moz-borde
 	<div id = "Div6" name="Yaw"
 	style="position:absolute;top:320px; left: 0%;border: 2px solid #333333; -moz-border-radius : 10px; height: 130px; width: 27%; z-index:100;background-color:rgba(0,0,0,0.3);">
 	<span style ="position:absolute; top:0pt; left:70pt;"> </span>
-	<input id= "YawP" type="text" size="2"  style ="position:absolute;  top:50pt; right:65%; font-size:20px;" />
+	<input id= "YawP" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )" style ="position:absolute;  top:50pt; right:65%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:77%;"> P </span>
-	<input id= "YawI" type="text" size="2"  style ="position:absolute;  top:50pt; right:35%; font-size:20px;" />
+	<input id= "YawI" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )" style ="position:absolute;  top:50pt; right:35%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:47%;"> I </span>
-	<input id= "YawD" type="text" size="2"  style ="position:absolute;  top:50pt; right:5%; font-size:20px;" />
+	<input id= "YawD" type="text" size="2" onkeydown="return ( event.ctrlKey || event.altKey 
+                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    || (95<event.keyCode && event.keyCode<106)
+                    || (event.keyCode==8) || (event.keyCode==9) 
+                    || (event.keyCode>34 && event.keyCode<40) 
+                    || (event.keyCode==46) )" style ="position:absolute;  top:50pt; right:5%; font-size:20px;" />
 	<span style ="position:absolute; top:20pt; right:17%;"> D </span>
 
 	</div>
@@ -193,7 +253,7 @@ style="position:absolute;top:25px; left: 28%;border: 2px solid #333333; -moz-bor
 <div id="visWindow" name="visWindow">
 
 <div id = "Sim" name="Sim"
-	style="position:absolute;top:50px; left: 42%;border: 2px solid #333333; -moz-border-radius : 10px; height: 460px; width: 600px; z-index:100;background-color:rgba(0,0,0,0.3);">
+	style="position:absolute;top:50px; left: 42%;border: 2px solid #333333; -moz-border-radius : 10px; height: 500px; width: 500px; z-index:100;background-color:rgba(0,0,0,0.3);">
 			<div class="content">
 				<div id="unityPlayer">
 					<div class="missing" >
@@ -275,6 +335,8 @@ style="position:absolute;top:470px; left: 0%;border: 2px solid #333333; -moz-bor
 			alert('Incorrect username or password because I changed the username and password to nothing. Just press Login');
 		}
 	}
+
+	
 
 	function CreateLoginWindow() {
 		var LoginWindow = document.createElement("div");
