--- a/src/web/gui/GUI.html
+++ b/src/web/gui/GUI.html
@@ -498,7 +498,7 @@ style="position:absolute;top:470px; left: 0%;border: 2px solid #333333; -moz-bor
                   unity.SendMessage("MyObject", "gRoll", data.roll);
                   unity.SendMessage("MyObject", "gPitch", data.pitch);
                   unity.SendMessage("MyObject", "gYaw", data.yaw);
-                  UpdateRollPitchyawSpans(data);
+                  UpdateRollPitchYawSpans(data);
                   UpdateAH(data);
                   UpdateYawIndicator(data);
                   setTimeout(UpdateSimulation, 1000);
